# confluid

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  Jenkinsfile  Jenkinsfile.local  RATIONALE.md  README.md  REQUIREMENTS.md  TASKS.md  confluid.example.yaml  mlflow.db  pyproject.toml
.github/workflows/: ci.yml  release.yml
confluid/: __init__.py  bake.py  configurator.py  decorators.py  dumper.py  engine.py  env.py  exceptions.py  fluid.py  introspect.py  lazy.py  llm_schema.py  loader.py  mandatory.py  merger.py  no_broadcast.py  parser.py  pydantic_export.py  registry.py  report.py  resolver.py  schema.py  scopes.py  solidify.py  validation.py
docs/: broadcasting.md  class-design.md  concurrency.md  discovery.md  eager-classes.md  errors.md  interpolation.md  introspection.md  io-contract.md  performance.md  report.md  scopes.md  search-paths.md  tags.md  validation.md
examples/: basic_registration.py  broadcasting.py  concurrency.py  deep_injection.py  discovery.py  eager_classes.py  error_handling.py  interpolation_includes.py  introspection.py  io_contract.py  ml_pipeline.py  performance.py  report.py  reproducible_experiment.py  scoped_config.py  scopes.py  search_paths.py  tags_deferred.py  validation.py
examples/ml_experiments/: README.md  __init__.py  base.yaml  experiment_full.yaml  experiment_quick.yaml  run.py
examples/modular_includes/: __init__.py  base.yaml  experiment.yaml  run.py
tests/: conftest.py  test_advanced_config.py  test_all_gaps.py  test_bake.py  test_basic_parity.py  test_broadcast_attrs.py  test_broadcast_materialize.py  test_broadcast_robustness.py  test_broadcast_scoping.py  test_broadcast_wrapper_override.py  test_callable_target.py  test_cast.py  test_clone.py  test_configurator.py  test_context.py  test_deferred_broadcasting.py  test_dumper.py  test_eager.py  test_env.py  test_exceptions.py  test_fluid.py  test_fluid_v2.py  test_group.py  test_includes.py  test_introspect.py  test_io_contract.py  test_lazy.py  test_lazy_convention.py  test_list_index_refs.py  test_llm_schema.py  test_loader.py  test_merger.py  test_method_ref.py  test_names_parity.py  test_nested_refs.py  test_no_broadcast.py  test_optional_pydantic.py  test_ordered_merge.py  test_parity.py  test_parse_param_docs.py  (+17 more)
