[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluid"
version = "0.1.0"
description = "Modern, hierarchical configuration and dependency injection for Python."
readme = "README.md"
authors = [{name = "gearlux"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-junit-report>=2.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/gearlux/confluid"
Repository = "https://github.com/gearlux/confluid.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["confluid*"]

[tool.setuptools.package-data]
confluid = ["py.typed"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true
