[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluid"
version = "0.1.0"
description = "Modern, hierarchical configuration and dependency injection for Python."
readme = "README.md"
authors = [{name = "Taidal"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "log-flow>=0.1.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=6.0.0,<8.0.0",
    "flake8-junit-report>=2.1.0",
    "mypy>=1.0.0,<2.0.0",
    "types-PyYAML>=6.0.0",
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/Gearlux/confluid"
Repository = "https://github.com/Gearlux/confluid.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["confluid*"]

[tool.setuptools.package-data]
confluid = ["py.typed"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
disable_error_code = ["import-untyped"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "logflow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=confluid --cov-report=term-missing"
