[build-system]
# setuptools>=77 is the PEP 639 floor: `license` as a plain SPDX string below
# requires it (the TOML-table form is deprecated, removal slated 2027-02).
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluid"
version = "0.2.0"
description = "Modern, hierarchical configuration and dependency injection for Python."
readme = "README.md"
authors = [{name = "Gert Behiels"}]
# PEP 639 SPDX expression; the license CLASSIFIER is deliberately absent
# (deprecated in favour of this field — re-adding it reintroduces the
# SetuptoolsDeprecationWarning at build time).
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "loggair>=0.1.0",
    "python-dotenv>=1.0.0",
    # PEP 696 TypeVar(default=...) for the generic Lazy[T] fluid (fluid.py); the
    # stdlib typing gained `default` only in 3.13, py-floor is 3.12 so use the backport.
    "typing-extensions>=4.6.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
# Schema export (`to_pydantic`, `confluid_class_of`, `lazy_param_names_of`) and
# init/YAML/tool validation are pydantic-powered. Without this extra, confluid
# still imports and runs — validation degrades to "off" (logged once) and the
# schema-export API raises ImportError pointing here.
pydantic = [
    "pydantic>=2.0.0",
]
dev = [
    "pydantic>=2.0.0",
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=6.0.0,<8.0.0",
    "flake8-junit-report>=2.1.0",
    "mypy>=1.0.0,<2.0.0",
    "types-PyYAML>=6.0.0",
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<7.0.0",
]

[project.scripts]
# Build-time bake of __init__ body-slot names into <package>/_confluid_baked.py so
# broadcasting keeps seeing post-init attrs in compiled/frozen/zip deployments where
# inspect.getsource fails (see confluid/bake.py; `confluid-bake <pkg>` == `python -m confluid.bake <pkg>`).
confluid-bake = "confluid.bake:main"

[project.urls]
Homepage = "https://github.com/Gearlux/confluid"
Repository = "https://github.com/Gearlux/confluid.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["confluid*"]

[tool.setuptools.package-data]
confluid = ["py.typed"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
disable_error_code = ["import-untyped"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "loggair.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=confluid --cov-report=term-missing"
